remote/argocd/canonical-cloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canonical-cloud
  labels:
    app.kubernetes.io/part-of: canonical-cloud
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
