remote/argocd/canonical-cloud/web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canonical-cloud-web
  namespace: canonical-cloud
  labels:
    app.kubernetes.io/name: canonical-web-server
    app.kubernetes.io/component: web
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/metrics'
    prometheus.io/port: '8081'
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: canonical-web-server
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
      appProtocol: http
