remote/argocd/canonical-cloud/default-deny.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: canonical-cloud-default-deny
  namespace: canonical-cloud
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
